# gocardless-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gocardless_mcp/: __init__.py  server.py
