[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gocardless-mcp"
version = "0.1.0"
description = "MCP server for GoCardless API integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "gocardless-pro>=1.28.0",
]
keywords = ["mcp", "gocardless", "api", "payments", "xero"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/jmceleney/gocardless-mcp"
Repository = "https://github.com/jmceleney/gocardless-mcp"
Issues = "https://github.com/jmceleney/gocardless-mcp/issues"

[project.scripts]
gocardless-mcp = "gocardless_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gocardless_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/pyproject.toml",
    "/README.md",
]
